--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,28 @@ doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
-    meta(http-equiv="X-UA-Compatible" content="IE=edge")
-    meta(name="viewport" content="width=device-width, initial-scale=1")
-    meta(name="description" content="")
-    meta(name="author" content="")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    meta(name="description", content="")
+    meta(name="author", content="")
     
     title= title
     
     link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/font-awesome/font-awesome.css')
     link(rel='stylesheet', href='/stylesheets/freelancer.css')
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Montserrat:400,700")
+    link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic")
   body
     block content
+    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
+    
+    script(src='javascripts/bootstrap.min.js')
+    
+    script(src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js')
+    script(src='javascripts/classie.js')
+    script(src='javascripts/cbpAnimatedHeader.js')
+    
+    script(src='javascripts/jqBootstrapValidation.js')
+    
+    script(src='javascripts/freelancer.js')
