--- a/views/layout.jade
+++ b/views/layout.jade
@@ -27,65 +27,54 @@ html(lang="en")
               a(class="navbar-brand" href="#page-top")
                 |Tuqiri.net
           .collapse.navbar-collapse#bs-example-navbar-collapse-1
-              ul(class="nav navbar-nav navbar-right")
-                  li(class="hidden")
+            ul(class="nav navbar-nav navbar-right")
+                li(class="hidden")
                     a(href="#page-top")
-                  li(class="page-scroll")
+                li(class="page-scroll")
                     a(href="#portfolio")
                         |Portfolio
-                  li(class="page-scroll")
+                li(class="page-scroll")
                     a(href="#about")
                         |About
-                  li(class="page-scroll")
+                li(class="page-scroll")
+                    a(href="http://blog.tuqiri.net")
+                        |Blog
+                li(class="page-scroll")
                     a(href="#contact")
                         |Contact
-    //block content
-    header(style="background-color: #094475;")
+    header(id="home")
         .container
             .row
                 .col-lg-12
                     img(class="img-responsive" src="/images/logo.png" alt="Site Logo")
-                    span(class="name")
-                        |Nathan Morgan
+                    span(class="name") Nathan Morgan
                     hr(class="star-light")
-                    span(class="skills")
-                        |Web Developer - Database Designer - Programmer
-    section(id="portfolio")
-        .container
-            .row
-                .col-lg-12.text-center
-                    h2
-                        |Portfolio
-                    hr(class="star-primary")
-            .row
-                .col-sm-4.portfolio-item
-                    a(href="https://github.com/Tuqiri/tuqiri.net" class="portfolio-link" data-toggle="modal")
-                        .caption
-                            .caption-content
-                                .caption-text
-                                    h2
-                                        |Tuqiri.net
-                                    |Equestria Galleries is an enterprise-sized database project that uses Microsoft SQL server to provide a fast database to allow users to upload content. The website also uses C# ASP.NET framework with MVC to extract the data from the database and display it when needed for example a list of "New Submissions" on the homepage.
-                                .caption-icons
-                                    i(class="devicons devicons-database" title="Microsoft SQL Database")
-                                    i(class="devicons devicons-html5" title="HTML 5")
-                                    i(class="devicons devicons-netmagazine" title="C# .NET")
-                        img(src="/images/portfolio/tuqiri.net.png" class="img-responsive" alt="")
-                        
-                .col-sm-4.portfolio-item
-                    a(href="https://github.com/Tuqiri/Equestria-Galleries" class="portfolio-link" data-toggle="modal")
-                        .caption
-                            .caption-content
-                                .caption-text
-                                    h2
-                                        |Equestria Galleries
-                                    |Equestria Galleries is an enterprise-sized database project that uses Microsoft SQL server to provide a fast database to allow users to upload content. The website also uses C# ASP.NET framework with MVC to extract the data from the database and display it when needed for example a list of "New Submissions" on the homepage.
-                                .caption-icons
-                                    i(class="devicons devicons-database" title="Microsoft SQL Database")
-                                    i(class="devicons devicons-html5" title="HTML 5")
-                                    i(class="devicons devicons-netmagazine" title="C# .NET")
-                        img(src="/images/portfolio/eg.png" class="img-responsive" alt="")
-                                
+                    span(class="skills") Web Developer - Database Designer - Programmer
+    
+    footer(class="text-center")
+        .footer-above
+            .container
+                .row
+                    .footer-col.col-md-4
+                        h3 Location
+                        p
+                            |1 Leanard House
+                            br
+                            |Middlesbrough, TS4 2BF
+                    .footer-col.col-md-4
+                        h3 Around the Web
+                        ul(class="list-inline")
+                            li
+                                address
+                                    a(href="mailto:nathan.morgan@tuqiri.net" class="btn-social btn-outline")
+                                        i(class="fa fa-at")
+                            li
+                                a(href="http://uk.linkedin.com/in/nathandavidmorgan" class="btn-social btn-outline")
+                                    i(class="fa fa-linkedin")
+                            li
+                                a(href="http://blog.tuqiri.net" class="btn-social btn-outline")
+                                    i(class="fa fa-tumblr")
+                            
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
     
     script(src='javascripts/bootstrap.min.js')
