Added custom styling

--- a/public/stylesheets/freelancer.less
+++ b/public/stylesheets/freelancer.less
@@ -73,7 +73,7 @@ hr.star-primary:after {
 
 header {
 	text-align: center;
-	background: @brand-success;
+	background: #094475;
 	color: white;
 	.container {
 		padding-top: 100px;
@@ -96,6 +96,11 @@ header {
 			font-weight: 300;
 		}
 	}
+}
+
+#about{
+	background: #094475;
+	color: white;
 }
 
 @media(min-width:768px) {
