Changed wording of about page

--- a/views/about.jade
+++ b/views/about.jade
@@ -7,17 +7,12 @@ section(id="about")
         .row
             .col-lg-4.col-lg-offset-2
                 p
-                    |Hello! I'm Nathan Morgan, a North East England based Web Developer who specializes in PHP, Databases and Node.
-                    |You can find the full list of my current skills below. I have been working with websites for almost 6 years,
-                    |picking up and learning via online tutorials and blogs then expanding onto studying web development at University.
+                    |My name is Nathan Morgan. I am a North-East England based Web Developer who specializes in PHP, Databases and Node. You can find a summary of my current skills below. I have been working with websites for 6 years, developing my skills by studying various videos and blogs. I have since passsed a Web Development course at Teeside university.
             .col-lg-4
                 p
-                    |What started me off with wanting to learn about Web Development was a youtube video entitled 
-                    em "Web 2.0 ... The Machine is Us/ing Us" 
-                    |by a professor of Cultural Anthropology at Kansas State University 
-                    em "Michael Wesch".
-                    |This video is a snapshot in history and shows how the web has evolved from being a single static website to something much bigger 
-                    |allowing for collaboration.
+                    | My interest in Web Development was kindled by a presentation titled 
+                    em "Web 2.0 ... The Machine is Us/ing Us"
+                    |  by professor Michael Wesch of Kansas State University. The video is a snapshot in history and summarises how the web has evolved from a single static website to something much bigger allowing for collaboration between developers all over the globe.
             .col-lg-8.col-lg-offset-2
                 .embed-responsive.embed-responsive-16by9
                     iframe(class="embed-responsive-item" src="//www.youtube.com/embed/6gmP4nk0EOE" allowfullscreen)
