Added more projects to the portfolio page

--- a/views/portfolio.jade
+++ b/views/portfolio.jade
@@ -10,6 +10,21 @@ section(id="portfolio")
                     .caption
                         .caption-content
                             .caption-text
+                                h2 CruxStore CMS 
+                                |Cruxstore Content Management System (CMS) is a website currently in development that will allow for companys that wish to setup an online store be able to do just that without the complicated setups found in other CMSs. The website is made in PHP using the Phalcon framework and MySQL for the database.
+                                br
+                                br
+                            .caption-icons
+                                i(class="devicons devicons-database" title="MySQL")
+                                i(class="devicons devicons-html5" title="HTML 5")
+                                i(class="devicons devicons-php" title="PHP with Phalcon")
+                    img(src="/images/portfolio/template.png" class="img-responsive" alt="")
+            
+            .col-sm-4.portfolio-item
+                a(href="https://github.com/Tuqiri/tuqiri.net" class="portfolio-link" data-toggle="modal")
+                    .caption
+                        .caption-content
+                            .caption-text
                                 h2 Tuqiri.net
                                 |Tuqiri.net is a website that displays my portfolio of work. The website is developed using node.js with express.js framework to allow for a MVC architecture that will be better to develop with. The database is MongoDB due to the speed of retreaving data and because of how small the database is.
                                 br
@@ -21,12 +36,13 @@ section(id="portfolio")
                     img(src="/images/portfolio/tuqiri.net.png" class="img-responsive" alt="")
             
             .col-sm-4.portfolio-item
-                a(href="https://github.com/Tuqiri/tuqiri.net" class="portfolio-link" data-toggle="modal")
+                a(href="#" class="portfolio-link" data-toggle="modal")
                     .caption
                         .caption-content
                             .caption-text
                                 h2 Shop Crawler
-                                | Shop Crawler
+                                | Shop Crawler is a node.js application that scans over other companys store pages and reports back with any price changes of products. This application was used to keep track of competitors stores.
+                                | The application stored the prices in a MongoDB database and sent an email out with any price changes.
                                 br
                                 br
                             .caption-icons
@@ -35,7 +51,7 @@ section(id="portfolio")
                     img(src="/images/portfolio/pagecrawler.png" class="img-responsive" alt="")
             
             .col-sm-4.portfolio-item
-                a(href="https://github.com/Tuqiri/tuqiri.net" class="portfolio-link" data-toggle="modal")
+                a(href="https://github.com/Tuqiri/SharpFrame" class="portfolio-link" data-toggle="modal")
                     .caption
                         .caption-content
                             .caption-text
@@ -49,7 +65,7 @@ section(id="portfolio")
                     img(src="/images/portfolio/sharpframe.png" class="img-responsive" alt="")
             
             .col-sm-4.portfolio-item
-                a(href="https://github.com/Tuqiri/tuqiri.net" class="portfolio-link" data-toggle="modal")
+                a(href="https://github.com/Tuqiri/simpsons-group-store" class="portfolio-link" data-toggle="modal")
                     .caption
                         .caption-content
                             .caption-text
@@ -72,22 +88,35 @@ section(id="portfolio")
                                 i(class="devicons devicons-html5" title="HTML 5")
                                 i(class="devicons devicons-netmagazine" title="C# with ASP.NET")
                     img(src="/images/portfolio/eg.png" class="img-responsive" alt="")
-            
+                    
             .col-sm-4.portfolio-item
-                a(href="https://github.com/Tuqiri/Equestria-Galleries" class="portfolio-link" data-toggle="modal")
+                a(href="https://github.com/Tuqiri/JackInTheBox" class="portfolio-link" data-toggle="modal")
                     .caption
                         .caption-content
                             .caption-text
-                                h2 DerpyMail
-                                | DerpyMail
+                                h2 JackInTheBox North East
+                                |JackInTheBox
                             .caption-icons
                                 i(class="devicons devicons-database" title="MySQL Database")
                                 i(class="devicons devicons-html5" title="HTML 5")
                                 i(class="devicons devicons-php" title="PHP")
                     img(src="/images/portfolio/template.png" class="img-responsive" alt="")
+            
+            .col-sm-4.portfolio-item
+                a(href="https://github.com/Tuqiri/DerpyMail" class="portfolio-link" data-toggle="modal")
+                    .caption
+                        .caption-content
+                            .caption-text
+                                h2 DerpyMail
+                                |DerpyMail is an email service that allowed users to register for a email address. This website was a challenge since at its prime it was holding 1,000 unique visitors a day and this was the first project that I had used SQL and PHP. The website also had some basic user management such as registering for an account, logging in and changing account details.
+                            .caption-icons
+                                i(class="devicons devicons-database" title="MySQL Database")
+                                i(class="devicons devicons-html5" title="HTML 5")
+                                i(class="devicons devicons-php" title="PHP")
+                    img(src="/images/portfolio/derpymail.png" class="img-responsive" alt="")
                     
             .col-sm-4.portfolio-item
-                a(href="https://github.com/Tuqiri/Equestria-Galleries" class="portfolio-link" data-toggle="modal")
+                a(href="#" class="portfolio-link" data-toggle="modal")
                     .caption
                         .caption-content
                             .caption-text
