--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,10 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     meta(name="description", content="")
     meta(name="author", content="")
+    
+    meta(name="google-site-verification" content="s5Yx5jgOGgXvf1GoMlMtoZgBhnBchhRFJUm6wIZV4lc")
+    meta(name="google-site-verification" content="s5Yx5jgOGgXvf1GoMlMtoZgBhnBchhRFJUm6wIZV4lc")
+    
     title= title
     
     link(rel='stylesheet', href='/stylesheets/bootstrap/bootstrap.css')
@@ -58,9 +62,9 @@ html(lang="en")
                     .footer-col.col-md-4
                         h3 Location
                         p
-                            |1 Leanard House
+                            |Teesside, Middlesbrough
                             br
-                            |Middlesbrough, TS4 2BF
+                            |North Yorkshire
                     .footer-col.col-md-4
                         h3 Around the Web
                         ul(class="list-inline")
@@ -74,6 +78,15 @@ html(lang="en")
                             li
                                 a(href="http://blog.tuqiri.net" class="btn-social btn-outline")
                                     i(class="fa fa-tumblr")
+                    .footer-col.col-md-4#usefulStuff
+                        h3 Useful Stuff
+                        p
+                            |Site created in 
+                            a(href="http://expressjs.com/") express.js
+                            |  using 
+                            a(href="http://nodejs.org/") node.js
+                            |  server
+                        p
                             
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
     
